Fixed overflowing cell svg.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -497,6 +497,11 @@ html {
   display: block;
 }
 
+.play-cell__svg svg {
+  width: 100%;
+  height: 100%;
+}
+
 .scoreboard {
   display: flex;
   justify-content: center;
