--- a/assets/scss/4-elements/mainGame/_playCell.scss
+++ b/assets/scss/4-elements/mainGame/_playCell.scss
@@ -35,3 +35,7 @@
   display: block;
 }
 
+.play-cell__svg svg {
+  width: 100%;
+  height: 100%;
+}
